--- a/style.css
+++ b/style.css
@@ -258,16 +258,20 @@ ion-icon{
     }
     #header_container{
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+       
+       
         text-align: center;
-        margin: auto;
+        margin: 0;
     }
     #header_box1{
         padding: 5px;
+        flex: 50%;
+        width: 100%;
     }
     #header_box2{
         padding: 5px;
+        flex: 50%;
+        width: 100%;
     }
     .main_container1{
         flex-direction: column;
@@ -331,7 +335,7 @@ ion-icon{
         align-items: center;
     }
     .btn1{
-        width: 90%;
+        width: 70%;
     }
     .btn2{
         margin-right: 5px;
